--- a/.github/workflows/ROMROM-ANDROID-PR-BUILD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-PR-BUILD.yaml
@@ -25,20 +25,12 @@ jobs:
         id: create-env
         run: |
           printf "%s\n" "${{ secrets.ENV }}" > .env
-          if [ $? -ne 0 ]; then
-            echo "::error::환경 변수 파일 생성 실패!"
-            exit 1
-          fi
 
       - name: 키스토어 설정
         id: setup-keystore
         run: |
           mkdir -p android/app/keystore
           echo "${{ secrets.KEYSTORE_FILE }}" | base64 -d > android/app/keystore/key.jks
-          if [ $? -ne 0 ]; then
-            echo "::error::키스토어 파일 생성 실패!"
-            exit 1
-          fi
           
           echo "storeFile=keystore/key.jks" > android/key.properties
           echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
@@ -100,58 +92,41 @@ jobs:
 
       - name: 코드 분석 실행
         id: flutter-analyze
-        run: flutter analyze
+        run: |
+          # 결과를 파일로 저장
+          flutter analyze > flutter_analyze_output.txt 2>&1 || {
+            echo "FLUTTER_ANALYZE_FAILED=true" >> $GITHUB_ENV
+            echo "FLUTTER_ANALYZE_OUTPUT<<EOF" >> $GITHUB_ENV
+            cat flutter_analyze_output.txt >> $GITHUB_ENV
+            echo "EOF" >> $GITHUB_ENV
+            exit 1
+          }
 
       - name: APK 빌드
         id: build-apk
-        run: flutter build apk --debug
+        run: |
+          # 결과를 파일로 저장
+          flutter build apk --debug > flutter_build_output.txt 2>&1 || {
+            echo "FLUTTER_BUILD_FAILED=true" >> $GITHUB_ENV
+            echo "FLUTTER_BUILD_OUTPUT<<EOF" >> $GITHUB_ENV
+            cat flutter_build_output.txt | tail -n 20 >> $GITHUB_ENV
+            echo "EOF" >> $GITHUB_ENV
+            exit 1
+          }
 
       - name: 빌드 결과 확인
         id: check-output
         run: |
           if [ ! -d "build/app/outputs/flutter-apk/" ]; then
-            echo "::error::빌드 결과물 디렉토리가 존재하지 않습니다!"
+            echo "BUILD_CHECK_FAILED=true" >> $GITHUB_ENV
+            echo "BUILD_CHECK_ERROR=빌드 결과물 디렉토리가 존재하지 않습니다!" >> $GITHUB_ENV
             exit 1
           fi
-          
-          ls -la build/app/outputs/flutter-apk/
           
           if [ ! -f "build/app/outputs/flutter-apk/app-debug.apk" ]; then
-            echo "::error::APK 파일이 생성되지 않았습니다!"
+            echo "BUILD_CHECK_FAILED=true" >> $GITHUB_ENV
+            echo "BUILD_CHECK_ERROR=APK 파일이 생성되지 않았습니다!" >> $GITHUB_ENV
             exit 1
-          fi
-
-      # 실패한 단계 찾기
-      - name: 실패한 단계 찾기
-        id: find-failure
-        if: failure()
-        run: |
-          if [ "${{ steps.checkout.outcome }}" == "failure" ]; then
-            echo "failed_step=소스코드 체크아웃" >> $GITHUB_OUTPUT
-          elif [ "${{ steps.create-env.outcome }}" == "failure" ]; then
-            echo "failed_step=환경 변수 파일 생성" >> $GITHUB_OUTPUT
-          elif [ "${{ steps.setup-keystore.outcome }}" == "failure" ]; then
-            echo "failed_step=키스토어 설정" >> $GITHUB_OUTPUT
-          elif [ "${{ steps.setup-flutter.outcome }}" == "failure" ]; then
-            echo "failed_step=Flutter 설정" >> $GITHUB_OUTPUT
-          elif [ "${{ steps.create-local-props.outcome }}" == "failure" ]; then
-            echo "failed_step=local.properties 생성" >> $GITHUB_OUTPUT
-          elif [ "${{ steps.install-deps.outcome }}" == "failure" ]; then
-            echo "failed_step=의존성 설치" >> $GITHUB_OUTPUT
-          elif [ "${{ steps.setup-gradle.outcome }}" == "failure" ]; then
-            echo "failed_step=Gradle 설정" >> $GITHUB_OUTPUT
-          elif [ "${{ steps.setup-java.outcome }}" == "failure" ]; then
-            echo "failed_step=Java 설정" >> $GITHUB_OUTPUT
-          elif [ "${{ steps.setup-android.outcome }}" == "failure" ]; then
-            echo "failed_step=Android SDK 설정" >> $GITHUB_OUTPUT
-          elif [ "${{ steps.flutter-analyze.outcome }}" == "failure" ]; then
-            echo "failed_step=코드 분석" >> $GITHUB_OUTPUT
-          elif [ "${{ steps.build-apk.outcome }}" == "failure" ]; then
-            echo "failed_step=APK 빌드" >> $GITHUB_OUTPUT
-          elif [ "${{ steps.check-output.outcome }}" == "failure" ]; then
-            echo "failed_step=빌드 결과 확인" >> $GITHUB_OUTPUT
-          else
-            echo "failed_step=알 수 없는 단계" >> $GITHUB_OUTPUT
           fi
 
       - name: 빌드 성공 댓글 작성
@@ -164,18 +139,112 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `✅ 프로젝트 빌드 성공`
+              body: `✅ 프로젝트 빌드 성공
+
+              APK 빌드가 완료되었습니다.`
             })
 
-      - name: 빌드 실패 댓글 작성
-        if: failure()
+      - name: 빌드 실패 댓글 작성 - 코드 분석 실패
+        if: failure() && env.FLUTTER_ANALYZE_FAILED == 'true'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
+            const analyzeOutput = process.env.FLUTTER_ANALYZE_OUTPUT;
+            
+            // 에러 메시지에서 중요한 부분 추출
+            const errorLines = analyzeOutput.split('\n')
+              .filter(line => line.includes('error') || line.includes('warning') || line.includes('issue found'))
+              .join('\n');
+            
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `❌ 프로젝트 빌드 실패\n\n실패한 단계: ${{ steps.find-failure.outputs.failed_step }}`
+              body: `❌ 프로젝트 빌드 실패
+
+            **실패한 단계:** 코드 분석
+
+            **분석 결과:**
+            \`\`\`
+            ${errorLines}
+            \`\`\`
+
+            코드 내 문제를 수정한 후 다시 시도해주세요.`
+            })
+
+      - name: 빌드 실패 댓글 작성 - APK 빌드 실패
+        if: failure() && env.FLUTTER_BUILD_FAILED == 'true'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const buildOutput = process.env.FLUTTER_BUILD_OUTPUT;
+            
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `❌ 프로젝트 빌드 실패
+
+            **실패한 단계:** APK 빌드
+
+            **빌드 로그:**
+            \`\`\`
+            ${buildOutput}
+            \`\`\`
+
+            빌드 오류를 확인하고 수정해주세요.`
+            })
+
+      - name: 빌드 실패 댓글 작성 - 결과 확인 실패
+        if: failure() && env.BUILD_CHECK_FAILED == 'true'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const error = process.env.BUILD_CHECK_ERROR;
+            
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `❌ 프로젝트 빌드 실패
+
+            **실패한 단계:** 빌드 결과 확인
+
+            **오류:**
+            ${error}
+
+            빌드 프로세스를 확인해주세요.`
+            })
+
+      - name: 기타 빌드 실패 댓글 작성
+        if: failure() && env.FLUTTER_ANALYZE_FAILED != 'true' && env.FLUTTER_BUILD_FAILED != 'true' && env.BUILD_CHECK_FAILED != 'true'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            // 실패한 단계 찾기
+            let failedStep = '알 수 없는 단계';
+            
+            if ('${{ steps.checkout.outcome }}' === 'failure') failedStep = '소스코드 체크아웃';
+            else if ('${{ steps.create-env.outcome }}' === 'failure') failedStep = '환경 변수 파일 생성';
+            else if ('${{ steps.setup-keystore.outcome }}' === 'failure') failedStep = '키스토어 설정';
+            else if ('${{ steps.setup-flutter.outcome }}' === 'failure') failedStep = 'Flutter 설정';
+            else if ('${{ steps.create-local-props.outcome }}' === 'failure') failedStep = 'local.properties 생성';
+            else if ('${{ steps.install-deps.outcome }}' === 'failure') failedStep = '의존성 설치';
+            else if ('${{ steps.setup-gradle.outcome }}' === 'failure') failedStep = 'Gradle 설정';
+            else if ('${{ steps.setup-java.outcome }}' === 'failure') failedStep = 'Java 설정';
+            else if ('${{ steps.setup-android.outcome }}' === 'failure') failedStep = 'Android SDK 설정';
+            
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `❌ 프로젝트 빌드 실패
+
+            **실패한 단계:** ${failedStep}
+
+            빌드 로그를 확인하여 문제를 해결해주세요.`
             })
