--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_messaging: ^16.0.4
   flutter_dotenv: ^5.2.1
   flutter_lints: ^3.0.0
+  flutter_local_notifications: ^19.5.0
   flutter_naver_map: ^1.3.1
   flutter_riverpod: ^2.6.1
   flutter_screenutil: ^5.9.3
